--- a/dnsmasq-log-anonomiser.service
+++ b/dnsmasq-log-anonomiser.service
@@ -9,7 +9,7 @@ Type=simple
 StandardOutput=syslog
 StandardError=syslog
 Restart=no
-ExecStart=/usr/local/sbin/dnsmasq-log-anonomiser
+ExecStart=/usr/local/sbin/dnsmasq-log-anonomiser --config '/etc/dnsmasq-log-anonomiser.conf'
 
 [Install]
 WantedBy=dnsmasq.service
