--- a/dnsmasq-log-anonomiser.conf
+++ b/dnsmasq-log-anonomiser.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-DnsmasqLogIn = /var/log/dnsmasq.log
-DnsmasqLogOut = /var/log/pihole.log
-AnonDomain = example.com
-AnonIP = 0.0.0.0
+input = /var/log/dnsmasq.log
+output = /var/log/pihole.log
+domain = example.com
+address = 0.0.0.0
