--- a/dnsmasq-log-anonymiser.conf
+++ b/dnsmasq-log-anonymiser.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
 input = /var/log/dnsmasq.log
-output = /var/log/pihole.log
+output = /var/log/dnsmasq-anon.log
 domain = example.com
 address = 0.0.0.0
