--- a/dnsmasq-log-anonymiser.conf
+++ b/dnsmasq-log-anonymiser.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 input = /var/log/dnsmasq.log
 output = /var/log/dnsmasq-anon.log
-domain = example.com
+domain = anon.test
 address = 0.0.0.0
 verbose = False
